<resources>
    <string name="app_name">Springlr Demo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="fb_login_text">Sign in with facebook</string>
    <string name="twitter_login_text">Sign in with Twitter</string>
    <string name="google_login_text">Sign in with Google</string>
    <string name="or">or</string>

    <!-- hints -->
    <string name="email_hint">Email</string>
    <string name="username_hint">Username</string>
    <string name="username_email_hint">Username/Email</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>

    <string name="forgot">forgot?</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">No account yet? Create one</string>
    <string name="sign_up_button">Sign up</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_smart_login">SmartLoginActivity</string>


    <string name="config_data">config</string>

    <string name="network_error">Something went wrong. Please check Network Connection.</string>
    <string name="username_error">Please enter your username</string>
    <string name="email_error">Please enter your email</string>
    <string name="password_error">Please choose a password</string>
    <string name="no_email_error">You need an email to sign up</string>
    <string name="invalid_email_error">Please enter a valid email</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>

    <string name="loading_holder">Please wait…</string>
    <string name="logging_holder">Logging in…</string>
    <string name="getting_data">Getting User Info…</string>
    <string name="password_mismatch">Make sure your passwords match</string>
    <string name="login_failed">Login failed! Try again!</string>
    <string name="sign_in_facebook">Sign in Facebook</string>
    <string name="sign_in_google">Sign in Google</string>
    <string name="logout_text">Logout</string>
    <string name="facebook_app_id">1729279517185067</string>
    <string name="fb_login_protocol_scheme">fb1729279517185067</string>
    <string name="enter_info_accept">ACCEPT</string>
    <string name="ei_username">USERNAME</string>
    <string name="edi_gender">GENDER</string>
    <string name="edi_date_of_birth">DATE OF BIRTH</string>
    <string name="edi_bio">BIO</string>
    <string name="eid_email">EMAIL</string>
    <string name="eid_name">NAME</string>
</resources>
